résumé: Fix header background being ignored on Firefox and Edge
Why Edge?? wtf

--- a/résumé/styles.css
+++ b/résumé/styles.css
@@ -1,5 +1,8 @@
 :root {
   --theme: #22938e;
+  /* Firefox and Edge (but not Chrome!) removes the header background color */
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact;
 }
 html {
   height: 100%;
